--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,9 @@
     "angular-mocks": "~1.5.0",
     "angular-ui-grid": "^3.2.1",
     "angular-ui-router": "^0.3.1",
-    "angular-bootstrap": "^1.3.3"
+    "angular-bootstrap": "^1.3.3",
+    "angular-cookies": "^1.5.7",
+    "bootstrap": "^3.3.6",
+    "jQuery": "^3.0.0"
   }
 }
