--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,6 @@
     "angular-ui-router": "^0.3.1",
     "angular-bootstrap": "^1.3.3",
     "angular-cookies": "^1.5.7",
-    "bootstrap": "^3.3.6",
-    "jQuery": "^3.0.0"
+    "bootstrap": "^3.3.6"
   }
 }
