--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "angular-ui-router": "^0.3.1",
     "angular-bootstrap": "^1.3.3",
     "angular-cookies": "^1.5.7",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "angular-animate": "^1.5.7"
   }
 }
