--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular-bootstrap": "^1.3.3",
     "angular-cookies": "^1.5.7",
     "bootstrap": "^3.3.6",
-    "angular-animate": "^1.5.7"
+    "angular-animate": "^1.5.7",
+    "angular-smart-table": "^2.1.8"
   }
 }
